@@ -1,13 +1,13 @@
 package com.ak.comm.converter.aper;
 
 import java.nio.ByteOrder;
-import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Stream;
 
 import javax.annotation.Nonnull;
-import javax.measure.Unit;
+import javax.annotation.ParametersAreNonnullByDefault;
 
 import com.ak.comm.bytes.BufferFrame;
 import com.ak.comm.converter.Converter;
@@ -15,31 +15,38 @@ import com.ak.comm.converter.DependentVariable;
 import com.ak.comm.converter.LinkedConverter;
 import com.ak.comm.converter.ToIntegerConverter;
 import com.ak.comm.converter.Variable;
-import org.testng.Assert;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.MethodSource;
 import tec.uom.se.unit.MetricPrefix;
 import tec.uom.se.unit.Units;
 
-public class AperStage3Current2NIBPVariableTest {
-  @DataProvider(name = "variables")
-  public static Object[][] variables() {
-    return new Object[][] {
-        {new byte[] {1,
-            (byte) 0x9a, (byte) 0x88, 0x01, 0,
-            2, 0, 0, 0,
-            (byte) 0xf1, 0x05, 0, 0,
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
-            (byte) 0xff, (byte) 0xff, (byte) 0xff, 0,
-            5, 0, 0, 0,
-            (byte) 0xd0, 0x07, 0, 0},
+class AperStage3Current2NIBPVariableTest {
+  static Stream<Arguments> variables() {
+    return Stream.of(
+        arguments(new byte[] {1,
+                (byte) 0x9a, (byte) 0x88, 0x01, 0,
+                2, 0, 0, 0,
+                (byte) 0xf1, 0x05, 0, 0,
 
-            new int[] {55498, 331178, -702869, 1322, 1748}},
-    };
+                (byte) 0xff, (byte) 0xff, (byte) 0xff, 0,
+                5, 0, 0, 0,
+                (byte) 0xd0, 0x07, 0, 0},
+
+            new int[] {55498, 331178, -702869, 1322, 1748})
+    );
   }
 
-  @Test(dataProvider = "variables")
-  public void testApply(@Nonnull byte[] inputBytes, @Nonnull int[] outputInts) {
+  @ParameterizedTest
+  @MethodSource("variables")
+  @ParametersAreNonnullByDefault
+  void testApply(byte[] inputBytes, int[] outputInts) {
     Converter<BufferFrame, AperStage3Current2NIBPVariable> converter = LinkedConverter
         .of(new ToIntegerConverter<>(AperStage1Variable.class, 1000), AperStage2UnitsVariable.class)
         .chainInstance(AperStage3Current2NIBPVariable.class);
@@ -48,62 +55,53 @@ public class AperStage3Current2NIBPVariableTest {
     for (int i = 0; i < 400 - 1; i++) {
       long count = converter.apply(bufferFrame).peek(ints -> {
         if (!processed.get()) {
-          Assert.assertEquals(ints, outputInts, "expected = %s, actual = %s".formatted(Arrays.toString(outputInts), Arrays.toString(ints)));
+          assertThat(ints).containsExactly(outputInts);
           processed.set(true);
         }
       }).count();
       if (processed.get()) {
-        Assert.assertEquals(count, 1);
+        assertThat(count).isEqualTo(1);
         break;
       }
     }
-    Assert.assertTrue(processed.get(), "Data are not converted!");
-    Assert.assertEquals(converter.getFrequency(), 125, 0.1);
+    assertTrue(processed.get(), "Data are not converted!");
+    assertThat(converter.getFrequency()).isEqualTo(125.0);
+  }
+
+  @ParameterizedTest
+  @EnumSource(value = AperStage3Current2NIBPVariable.class)
+  void testGetInputVariables(@Nonnull DependentVariable<AperStage2UnitsVariable, AperStage3Current2NIBPVariable> variable) {
+    assertThat(variable.getInputVariables()).hasSize(1);
   }
 
   @Test
-  public void testGetInputVariables() {
-    Assert.assertTrue(EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream().mapToInt(value -> value.getInputVariables().size())
-        .allMatch(value -> value == 1));
-  }
-
-  @Test
-  public void testGetUnit() {
-    List<? extends Unit<?>> actual = EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream()
-        .map(DependentVariable::getUnit).toList();
-    Assert.assertEquals(actual,
-        Arrays.asList(
+  void testGetUnit() {
+    assertThat(EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream().map(DependentVariable::getUnit))
+        .isEqualTo(List.of(
             MetricPrefix.MILLI(Units.OHM),
             MetricPrefix.MILLI(Units.OHM), MetricPrefix.MICRO(Units.VOLT),
             Units.OHM, Units.OHM
-        ),
-        actual.toString()
-    );
+        ));
   }
 
   @Test
-  public void testOptions() {
-    List<Variable.Option> actual = EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream()
-        .flatMap(v -> v.options().stream()).toList();
-    Assert.assertEquals(actual,
-        Arrays.asList(
+  void testOptions() {
+    assertThat(EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream().flatMap(v -> v.options().stream()))
+        .isEqualTo(List.of(
             Variable.Option.VISIBLE, Variable.Option.VISIBLE, Variable.Option.VISIBLE,
             Variable.Option.TEXT_VALUE_BANNER, Variable.Option.TEXT_VALUE_BANNER
-        ),
-        actual.toString()
-    );
+        ));
   }
 
-  @Test
-  public void testFilterDelay() {
-    Assert.assertTrue(EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream().mapToDouble(value -> value.filter().getDelay())
-        .allMatch(value -> Double.compare(value, 7.875) == 0)
-    );
+  @ParameterizedTest
+  @EnumSource(value = AperStage3Current2NIBPVariable.class)
+  void testFilterDelay(@Nonnull Variable<AperStage3Current2NIBPVariable> variable) {
+    assertThat(variable.filter().getDelay()).isEqualTo(7.875);
   }
 
-  @Test
-  public void testInputVariablesClass() {
-    Assert.assertTrue(EnumSet.allOf(AperStage3Current2NIBPVariable.class).stream().map(AperStage3Current2NIBPVariable::getInputVariablesClass)
-        .allMatch(AperStage2UnitsVariable.class::equals));
+  @ParameterizedTest
+  @EnumSource(value = AperStage3Current2NIBPVariable.class)
+  void testInputVariablesClass(@Nonnull DependentVariable<AperStage2UnitsVariable, AperStage3Current2NIBPVariable> variable) {
+    assertThat(variable.getInputVariablesClass()).isEqualTo(AperStage2UnitsVariable.class);
   }
 }
